Ensured sidebar does not overlap header in mobile resolutions

--- a/src/common/AsideMenu.scss
+++ b/src/common/AsideMenu.scss
@@ -8,16 +8,15 @@ $asideMenuMobileWidth: 280px;
   position: fixed !important;
   padding-top: 13px;
   padding-bottom: 10px;
-  top: 0;
+  top: $headerHeight - 3px;
   bottom: 0;
   left: 0;
   display: block;
-  z-index: 1050;
+  z-index: 1010;
   overflow-x: hidden;
   overflow-y: auto;
 
   @media (min-width: $mdMin) {
-    top: $headerHeight;
     padding: 30px 15px 15px;
     border-right: 1px solid #eee;
   }
@@ -36,9 +35,7 @@ $asideMenuMobileWidth: 280px;
 }
 
 .aside-menu__nav {
-  @media(min-width: $smMin) {
-    height: 100%;
-  }
+  height: 100%;
 }
 
 .aside-menu__item {
